src/test/ui/type/type-mismatch-multiple.stderr
error[E0308]: mismatched types
  --> $DIR/type-mismatch-multiple.rs:3:27
   |
LL | fn main() { let a: bool = 1; let b: i32 = true; }
   |                    ----   ^ expected bool, found integer
   |                    |
   |                    expected due to this
   |
   = note: expected type `bool`
              found type `{integer}`

error[E0308]: mismatched types
  --> $DIR/type-mismatch-multiple.rs:3:43
   |
LL | fn main() { let a: bool = 1; let b: i32 = true; }
   |                                     ---   ^^^^ expected i32, found bool
   |                                     |
   |                                     expected due to this

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0308`.
